# agenttrust

./: .gitignore  LICENSE  README.md  dashboard-mockup.html  pitch-deck.html  pyproject.toml  trustcheck-demo.html
agenttrust/: __init__.py
agenttrust/core/: __init__.py  beipackzettel.py  calibration.py  trust_score.py
agenttrust/integrations/: __init__.py  langchain.py  openai_provider.py
agenttrust/pipeline/: __init__.py  pipeline.py
agenttrust/qa/: __init__.py  reviewer.py  rubric.py
examples/: full_pipeline.py  quick_start.py
research/: index.html
research/knowledge-compounding/: index.html
research/personal-ai-stack/: index.html
tests/: test_calibration.py
