[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenttrust"
version = "0.1.0"
description = "Trust infrastructure for AI agents. Because confidence ≠ correctness."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Florian Ziesche" },
]
keywords = ["ai", "agents", "trust", "calibration", "llm", "safety"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
langchain = ["langchain-core>=0.1"]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.urls]
Homepage = "https://github.com/florianziesche/agenttrust"
Repository = "https://github.com/florianziesche/agenttrust"
Issues = "https://github.com/florianziesche/agenttrust/issues"
